--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
-			<artifactId>hamcrest-core</artifactId>
-			<version>1.3</version>
+    		<artifactId>hamcrest-library</artifactId>
+    		<version>1.3</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -27,6 +27,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
 			<scope>test</scope>
+			<exclusions>
+		        <exclusion>
+		            <groupId>org.hamcrest</groupId>
+		            <artifactId>hamcrest-core</artifactId>
+		        </exclusion>
+	   		</exclusions>
 		</dependency>
 
 		<dependency>
