--- a/src/querqy-solr/pom.xml
+++ b/src/querqy-solr/pom.xml
@@ -9,41 +9,53 @@
 		<relativePath>../querqy-parent/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>querqy-lucene</artifactId>
+	<artifactId>querqy-solr</artifactId>
 	<packaging>jar</packaging>
 
-	<name>querqy-lucene</name>
+	<name>querqy-solr</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<dependencies>
-		
+
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>querqy-core</artifactId>
+			<artifactId>querqy-lucene</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>querqy-core</artifactId>
-			<version>${project.version}</version>
-			<type>test-jar</type>
-			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>querqy-antlr</artifactId>
 			<version>${project.version}</version>
-			<optional>true</optional>
 		</dependency>
 		
 		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-analyzers-common</artifactId>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-core</artifactId>
 			<version>${lucene.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
 	</dependencies>
+	
+	<build>
+  <plugins>
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+      </configuration>
+      <executions>
+      <execution>
+        <phase>package</phase>
+        <goals>
+          <goal>single</goal>
+        </goals>
+      </execution>
+    </executions>
+    </plugin>
+  </plugins>
+</build>
+	
 </project>
