Transforms into maven reactor project

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
+# root project
 .classpath
 .project
 .settings/*
 target/*
+.DS_Store
+
+# modules
+*/.classpath
+*/.project
+*/.settings
+*/target
+
 
