--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<lucene.version>4.8.1</lucene.version>
+        <commons.io.version>2.1</commons.io.version>
+        <guava.version>14.0</guava.version>
 		<gpg.skip>true</gpg.skip>
 	</properties>
 
@@ -31,11 +33,11 @@
 			<artifactId>hamcrest-library</artifactId>
 			<version>1.3</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
+		</dependency>		
+        <dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>17.0</version>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
