--- a/querqy-solr/pom.xml
+++ b/querqy-solr/pom.xml
@@ -11,7 +11,17 @@
 	<artifactId>querqy-solr</artifactId>
 
 	<dependencies>
-	
+		<!-- 
+			The Solr test framework needs to be loaded before Lucene core,
+			otherwise we run into trouble loading the codec for testing
+		-->
+		<dependency>
+			<groupId>org.apache.solr</groupId>
+			<artifactId>solr-test-framework</artifactId>
+			<version>${lucene.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
@@ -44,6 +54,16 @@
 			<version>${lucene.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		<!-- needed by solr-test-framework -->
+    		<groupId>commons-logging</groupId>
+    		<artifactId>commons-logging</artifactId>
+    		<version>1.1.3</version>
+    		<scope>test</scope>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
