--- a/querqy-lucene/pom.xml
+++ b/querqy-lucene/pom.xml
@@ -10,6 +10,17 @@
 	<artifactId>querqy-lucene</artifactId>
 
 	<dependencies>
+	    <!-- 
+            The Solr test framework needs to be loaded before Lucene core,
+            otherwise we run into trouble loading the codec for testing
+        -->
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-test-framework</artifactId>
+            <version>${lucene.version}</version>
+            <scope>test</scope>
+        </dependency>
+        
 	
 		<dependency>
   			<groupId>commons-io</groupId>
