--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-MM-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>querqy-core</artifactId>
@@ -37,8 +37,8 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-			<id>central</id>
-			<name>bintray</name>
+			<id>bintray-muellenborn</id>
+			<name>bintray-muellenborn</name>
 			<url>http://dl.bintray.com/muellenborn/maven</url>
 		</repository>
 	</repositories>
