--- a/querqy-solr/pom.xml
+++ b/querqy-solr/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-MM-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>querqy-solr</artifactId>
