added scm section to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
 	<artifactId>querqy-parent</artifactId>
 	<version>1.0-MM-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	
+	<scm>
+        <url>git@github.com:muellenborn/querqy.git</url>
+        <connection>scm:git:git@github.com:muellenborn/querqy.git</connection>
+        <developerConnection>scm:git:git@github.com:muellenborn/querqy.git</developerConnection>
+      <tag>querqy-1.0-MM</tag>
+  	</scm>
 
 	<prerequisites>
 		<maven>3.2.0</maven>
