changed dictomaton version from snapshot to 1.1.1-MM

--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>eu.danieldk.dictomaton</groupId>
 			<artifactId>dictomaton</artifactId>
-			<version>1.1.1-MM-SNAPSHOT</version>
+			<version>1.1.1-MM</version>
 		</dependency>
 	</dependencies>
 	<build>
