--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,15 @@
 
 	<groupId>querqy</groupId>
 	<artifactId>querqy-parent</artifactId>
-	<version>1.0.1-RK-SNAPSHOT</version>
+	<version>1.0.1-RK</version>
 	<packaging>pom</packaging>
 	
 	<scm>
         <url>git@github.com:renekrie/querqy.git</url>
         <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
-  	</scm>
+  	  <tag>querqy-parent-1.0.1-RK</tag>
+  </scm>
 
 	<prerequisites>
 		<maven>3.2.0</maven>
