--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>1.0.1-RK</version>
+		<version>1.0.2-RK-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>querqy-core</artifactId>
