--- a/querqy-solr/pom.xml
+++ b/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>1.0.3-RK</version>
+		<version>1.0.4-RK-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>querqy-solr</artifactId>
