--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<lucene.version>4.9.0</lucene.version>
         <commons.io.version>2.1</commons.io.version>
         <guava.version>14.0</guava.version>
-		<gpg.skip>true</gpg.skip>
+		<dictomaton.version>1.2.0</dictomaton.version>
 	</properties>
 
 	<modules>
