--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>eu.danieldk.dictomaton</groupId>
 			<artifactId>dictomaton</artifactId>
-			<version>1.1.1-MM</version>
+			<version>${dictomaton.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -31,14 +31,4 @@
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>bintray-muellenborn</id>
-			<name>bintray-muellenborn</name>
-			<url>http://dl.bintray.com/muellenborn/maven</url>
-		</repository>
-	</repositories>
 </project>
