--- a/querqy-lucene/pom.xml
+++ b/querqy-lucene/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>1.0.5-RK-SNAPSHOT</version>
+		<version>1.0.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>querqy-lucene</artifactId>
 
