--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 
 	<groupId>querqy</groupId>
 	<artifactId>querqy-parent</artifactId>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.6</version>
 	<packaging>pom</packaging>
 	
 	<scm>
         <url>git@github.com:renekrie/querqy.git</url>
         <connection>scm:git:git@github.com:renekrie/querqy.git</connection>
         <developerConnection>scm:git:git@github.com:renekrie/querqy.git</developerConnection>
-  	  <tag>HEAD</tag>
+  	  <tag>querqy-parent-1.0.6</tag>
   </scm>
 
 	<prerequisites>
