--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<lucene.version>4.10.2</lucene.version>
         <commons.io.version>2.1</commons.io.version>
-        <guava.version>14.0</guava.version>
 	</properties>
 
 	<modules>
@@ -38,12 +37,12 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>		
-        <dependency>
+     <!--   <dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
-		<dependency>
+	-->	<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
