Add handling of generated terms to ShingleRewriter.
This commit adds a configurable feature flag (acceptGeneratedTerms) to the ShingleRewriter.
If set to true, a ShingleRewriter uses all terms to create shingles. If set to false, it only uses
terms from the user input for shingle generation.

--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,11 @@
           		</plugin>
         	</plugins>
     </reporting>
+
 	<distributionManagement>
 		<repository>
-			<id>bintray-rene-maven</id>
-			<name>renekrie-maven-querqy</name>
-			<url>https://api.bintray.com/maven/renekrie/maven/querqy</url>
+			<id>bintray</id>
+			<url>https://bintray.com/lichtsprung/maven/querqy</url>
 		</repository>
 	</distributionManagement>
 </project>
