--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,7 @@
 			<version>1.3</version>
 			<scope>test</scope>
 		</dependency>		
-     <!--   <dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
-		</dependency>
-	-->	<dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
@@ -125,8 +120,9 @@
 
 	<distributionManagement>
 		<repository>
-			<id>bintray</id>
-			<url>https://bintray.com/lichtsprung/maven/querqy</url>
+			<id>bintray-rene-maven</id>
+			<name>renekrie-maven-querqy</name>
+			<url>https://api.bintray.com/maven/renekrie/maven/querqy</url>
 		</repository>
 	</distributionManagement>
 </project>
