--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<lucene.version>4.10.2</lucene.version>
-        <commons.io.version>2.1</commons.io.version>
+        	<commons.io.version>2.1</commons.io.version>
 	</properties>
 
 	<modules>
@@ -54,6 +54,16 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+        			<version>2.19</version>
+        			<configuration>
+          				<systemPropertyVariables>
+            					<tests.codec>Lucene49</tests.codec>
+          				</systemPropertyVariables>
+        			</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
