Adding Solr/Lucene version to release name

--- a/querqy-solr/pom.xml
+++ b/querqy-solr/pom.xml
@@ -112,7 +112,14 @@
 					</execution>
 				</executions>
 			</plugin>
+
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagNameFormat>${project.artifactId}-${lucene.version}-${project.version}</tagNameFormat>
+                </configuration>
+            </plugin>
+
 		</plugins>
 	</build>
-
 </project>
