--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>2.8.1-SNAPSHOT</version>
+		<version>2.8.1</version>
 	</parent>
 
 	<artifactId>querqy-core</artifactId>
