--- a/querqy-antlr/pom.xml
+++ b/querqy-antlr/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>2.10.2</version>
+		<version>2.10.3-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>querqy-antlr</artifactId>
