--- a/querqy-solr/pom.xml
+++ b/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>querqy</groupId>
 		<artifactId>querqy-parent</artifactId>
-		<version>2.7.3-SNAPSHOT</version>
+		<version>2.7.3</version>
 	</parent>
 
 	<artifactId>querqy-solr</artifactId>
