--- a/querqy-for-lucene/querqy-lucene/pom.xml
+++ b/querqy-for-lucene/querqy-lucene/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>3.5.0-SNAPSHOT</version>
+        <version>4.0.lucene700.0-SNAPSHOT</version>
     </parent>
     <artifactId>querqy-lucene</artifactId>
 
@@ -63,26 +63,7 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <finalName>${project.artifactId}-${lucene.version}-${project.version}</finalName>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <configuration>
-                    <finalName>${project.artifactId}-${lucene.version}-${project.version}</finalName>
-                </configuration>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -91,13 +72,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-release-plugin</artifactId>
-                <configuration>
-                    <tagNameFormat>${project.artifactId}-${lucene.version}-${project.version}</tagNameFormat>
-                </configuration>
             </plugin>
 
         </plugins>
