[maven-release-plugin] prepare for next development iteration

--- a/querqy-for-lucene/querqy-solr/pom.xml
+++ b/querqy-for-lucene/querqy-solr/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>querqy</groupId>
         <artifactId>querqy-for-lucene</artifactId>
-        <version>4.0.lucene720.0</version>
+        <version>4.0.lucene720.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>querqy-solr</artifactId>
