--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -10,7 +10,6 @@
     </parent>
 
     <artifactId>querqy-core</artifactId>
-    <groupId>querqy</groupId>
     <version>3.3.0-SNAPSHOT</version>
 
     <scm>
@@ -21,10 +20,23 @@
     </scm>
 
     <properties>
-        <noggit.version>0.8</noggit.version>
+        <jackson.version>2.5.4</jackson.version>
+        <json-path.version>2.4.0</json-path.version>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${json-path.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
@@ -36,11 +48,6 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.noggit</groupId>
-            <artifactId>noggit</artifactId>
-            <version>${noggit.version}</version>
         </dependency>
 
     </dependencies>
