Querqy core must not depend on querqy/pom.xml

--- a/querqy-core/pom.xml
+++ b/querqy-core/pom.xml
@@ -2,13 +2,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>querqy</groupId>
-        <artifactId>querqy-parent</artifactId>
-        <version>3.2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
-    </parent>
+    <!--
+       Do not add <parent>querqy-parent</parent> here as we want to release querqy-core and querqy-for lucene
+       separately. The pom.xml in the parent directory only serves as a help to run a multi-module build when
+       developing new core and lucene/solr features at the same time.
+    -->
 
+    <groupId>querqy</groupId>
     <artifactId>querqy-core</artifactId>
     <version>3.3.0-SNAPSHOT</version>
 
@@ -19,7 +19,23 @@
         <tag>HEAD</tag>
     </scm>
 
+    <prerequisites>
+        <maven>3.3.0</maven>
+    </prerequisites>
+
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>3.1.2</maven-jar-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
+        <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
+        <junit.version>4.12</junit.version>
+        <hamcrest.version>2.1</hamcrest.version>
+        <mockito.version>2.27.0</mockito.version>
+
         <jackson.version>2.9.9</jackson.version>
         <json-path.version>2.4.0</json-path.version>
     </properties>
@@ -37,17 +53,30 @@
             <version>${jackson.version}</version>
         </dependency>
 
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
+            <version>${hamcrest.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
