[#76] Add Tests fpr ClassicRewriteChainLoader

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@
 .idea/*
 target/*
 .DS_Store
+.vscode
 
 # modules
 **/.classpath
 **/.project
 **/.settings
 **/target
+**/.factorypath
 
 #files
 *.iml
